Fix flickering issue in zen-essentials-container and adjust max-height calculations for improved layout consistency

--- a/Neo-Features/Theme/Features/Neo-Essentials/Neo-Essentials.css
+++ b/Neo-Features/Theme/Features/Neo-Essentials/Neo-Essentials.css
@@ -1,13 +1,22 @@
 @media not -moz-pref("neo.features.disabled") {
     @media not -moz-pref("neo.features.essentials.disabled") {
-        :root:not([animating-background="true"]){
+        :root:not([animating-background="true"]) {
             & .zen-essentials-container:not([hidden="true"]) {
                 &::before {
                     transition: opacity 0.4s ease, height 0.4s ease;
                 }
             }
         }
-        
+
+        /* This fixes an issue with the essentials area flickering when switching between workspaces with different containers */
+        /* The issue is a native browser bug, and it is not possible to fix it without changing the code of the browser */
+        & .zen-essentials-container[hidden="true"] {
+            opacity: 0 !important;
+            visibility: visible !important;
+            pointer-events: none !important;
+        }
+        /* --------------------------------------------------------------------------------------------------------------------*/
+
         #navigator-toolbox {
             & .zen-essentials-container {
 
@@ -18,7 +27,7 @@
                 scroll-behavior: smooth !important;
 
                 @media not -moz-pref("neo.features.essentials.keep-expanded") {
-                    max-height: calc(var(--tab-min-height) + 4px + 12px) !important;
+                    max-height: calc(var(--tab-min-height) + 4px + 8px) !important;
                 }
 
                 & .tabbrowser-tab {
@@ -90,9 +99,9 @@
             }
 
             @media not -moz-pref("neo.features.essentials.expanded.disabled") {
-                &[zen-sidebar-expanded="true"].zen-essentials-container {
+                &[zen-sidebar-expanded="true"]& .zen-essentials-container {
                     &:hover {
-                        max-height: calc(4 * (var(--tab-min-height) + 4px) + 12px) !important;
+                        max-height: calc(4 * (var(--tab-min-height) + 4px) + 10px) !important;
                     }
                 }
             }
